--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -1,14 +1,18 @@
-name: Publish Package
+name: Build, Publish and Release
 
 on:
-    push:
-        branches:
-        - main
-    workflow_dispatch:
+  push:
+    branches:
+      - main
+    tags:
+      - 'v*' # 仅在推送 v*.*.* 格式的 tag 时触发
+  workflow_dispatch:
 
 jobs:
-  publish:
+  build:
     runs-on: ubuntu-latest
+    outputs:
+      code: ${{ steps.read_code.outputs.code }}
     steps:
       - name: Checkout
         uses: actions/checkout@v5
@@ -17,31 +21,110 @@ jobs:
         uses: actions/setup-node@v5
         with:
           node-version: '20'
-          registry-url: 'https://registry.npmjs.org/'
+
+      - name: Install dependencies and build
+        run: |
+          npm install
+          npm run build
+
+      - name: Read code from file
+        id: read_code
+        run: echo "code=$(cat .github/code.txt)" >> $GITHUB_OUTPUT
+
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: dist
+          path: dist/
+
+  publish:
+    needs: build
+    runs-on: ubuntu-latest
+    # 仅在 main 分支推送或手动触发时运行
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main' || github.event_name == 'workflow_dispatch'
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v5
+
+      - name: Download build artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: dist
+          path: dist/
 
       - name: Set up Python 3.12
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
-          architecture: 'x64'
 
-      - name: Install dependencies
-        run: |
-          npm install
-          python -m pip install --upgrade pip
-          python -m venv venv
-          source venv/bin/activate
-          pip install --upgrade pip wheel setuptools
-          pip install aiohttp
+      - name: Install Python dependencies
+        run: pip install aiohttp
 
-      - name: Run build
-        run: npm run build
-
-      - name: Publish package
+      - name: Publish to server
         env:
           SERVER: ${{ secrets.PUBLISH_SERVER }}
           KEY: ${{ secrets.PUBLISH_KEY }}
+        run: python build/publish.py
+
+  release:
+    needs: build
+    runs-on: ubuntu-latest
+    # 仅在推送 tag 时运行
+    if: startsWith(github.ref, 'refs/tags/')
+    permissions:
+      contents: write # 允许创建 Release 和上传附件
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v5
+
+      - name: Download build artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: dist
+          path: dist/
+
+      - name: Set up Python 3.12
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+
+      - name: Install Python dependencies
+        run: pip install aiohttp
+
+      - name: Get tag name
+        id: get_tag
+        run: echo "tag=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
+
+      - name: Create info.json
         run: |
-          source venv/bin/activate
-          python build/publish.py
-            
+          echo '{
+            "tag": "${{ steps.get_tag.outputs.tag }}",
+            "code": "${{ needs.build.outputs.code }}"
+          }' > dist/info.json
+
+      - name: Create zip package
+        id: package
+        run: |
+          CODE=${{ needs.build.outputs.code }}
+          TAG=${{ steps.get_tag.outputs.tag }}
+          ZIP_NAME="${CODE}_${TAG}_webui.zip"
+          zip -r "${ZIP_NAME}" dist
+          echo "zip_name=${ZIP_NAME}" >> $GITHUB_OUTPUT
+
+      - name: Create Draft Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ steps.get_tag.outputs.tag }}
+          release_name: ${{ needs.build.outputs.code }}_${{ steps.get_tag.outputs.tag }}
+          draft: true
+          prerelease: false
+
+      - name: Upload asset to release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          UPLOAD_URL: ${{ steps.create_release.outputs.upload_url }}
+          ASSET_PATH: ${{ steps.package.outputs.zip_name }}
+        run: python build/release.py
