--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -113,14 +113,21 @@ jobs:
 
       - name: Create Draft Release
         id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: actions/github-script@v7
         with:
-          tag_name: ${{ steps.get_tag.outputs.tag }}
-          release_name: ${{ needs.build.outputs.code }}_${{ steps.get_tag.outputs.tag }}
-          draft: true
-          prerelease: false
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const tag = '${{ steps.get_tag.outputs.tag }}';
+            const name = '${{ needs.build.outputs.code }}_${{ steps.get_tag.outputs.tag }}';
+            const res = await github.rest.repos.createRelease({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              tag_name: tag,
+              name: name,
+              draft: true,
+              prerelease: false
+            });
+            core.setOutput('upload_url', res.data.upload_url);
 
       - name: Upload asset to release
         env:
